DPNG-13467 added latest index endpoint (#97)
